--- a/views/template/form1.html
+++ b/views/template/form1.html
@@ -12,7 +12,7 @@
     <link href="https://magicbox.bk.tencent.com/static_api/v3/assets/fontawesome/css/font-awesome.css" rel="stylesheet">
 
     <link href="https://magicbox.bk.tencent.com/static_api/v3/bk/css/bk.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="/views/static/css/main.css" rel="stylesheet">
     <!-- 以下两个插件用于在IE8以及以下版本浏览器支持HTML5元素和媒体查询，如果不需要用可以移除 -->
     <!--[if lt IE 9]>
     <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/js/html5shiv.min.js"></script>
@@ -37,7 +37,7 @@
                         <ul class="nav">
                             <li class="user-info">
                                 <a href="#">
-                                <img class="img-rounded" src="img/avatar.png">
+                                <img class="img-rounded" src="/views/static/img/avatar.png">
                                 <span>admin</span>
                             </a>
                             </li>
@@ -317,7 +317,7 @@
     <script src="https://magicbox.bk.tencent.com/static_api/v3/assets/bootstrap-3.3.4/js/bootstrap.min.js"></script>
 
     <script src="https://magicbox.bk.tencent.com/static_api/v3/bk/js/bk.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="/views/static/js/index.js"></script>
 
 </body>
 
